Slider 100% (excepting different breakpoints (maybe)), nftId gets pusjhed to end of itemDetails onclick. Starting on skeleton load state.

--- a/src/css/styles/style.css
+++ b/src/css/styles/style.css
@@ -13206,11 +13206,15 @@ a.read_more i {
 .nft_wrap {
   position: relative;
   width: 100%;
-  height: 200px;
+  height: 200%;
   overflow: hidden;
   border-radius: 10px 10px 0 0;
   -moz-border-radius: 10px 10px 0 0;
   -webkit-border-radius: 10px 10px 0 0;
+}
+
+.skeleton {
+  background-color: gray;
 }
 
 .nft_coll:hover img {
