--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,5 @@
 @import "./css/styles/style.css";
 @import "./css/colors/scheme-01.css";
 @import "./css/styles/coloring.css";
-@import "./css/styles/keen.css"
+@import "./css/styles/keen.css";
+@import "./css/styles/bwSkeleton.css";
