--- a/src/css/styles/keen.css
+++ b/src/css/styles/keen.css
@@ -23,6 +23,21 @@ button {
   border: 1px solid #ddd;
 }
 
+/* Trying to copy styles manually: BOOOOO */
+/* .arrow {
+  width: 45px;
+  height: 45px;
+  left: -12px;
+  margin: 5px;
+  padding: 10px;
+  top: 37.5%;
+  font-size: 30px;
+  border: 1px solid rgb(204, 204, 204);
+  transition-duration: .2s;
+  border-radius: 60px;
+} */
+
+
 .arrow:hover {
   background-color: #fff;
   box-shadow: 0 6px 20px 0 rgb(0 0 0 / 15%);
@@ -37,10 +52,109 @@ button {
   right: 0;
 }
 
-.arrow--disabled {
+/* .arrow--disabled {
   fill: rgba(153, 153, 153, 0.5);
   opacity: 0.5;
   cursor: not-allowed;
+} */
+
+
+.arrow--right {
+      --blue: #007bff;
+    --indigo: #6610f2;
+    --purple: #6f42c1;
+    --pink: #e83e8c;
+    --red: #dc3545;
+    --orange: #fd7e14;
+    --yellow: #ffc107;
+    --green: #28a745;
+    --teal: #20c997;
+    --cyan: #17a2b8;
+    --white: #fff;
+    --gray: #6c757d;
+    --gray-dark: #343a40;
+    --primary: #007bff;
+    --secondary: #6c757d;
+    --success: #28a745;
+    --info: #17a2b8;
+    --warning: #ffc107;
+    --danger: #dc3545;
+    --light: #f8f9fa;
+    --dark: #343a40;
+    --breakpoint-xs: 0;
+    --breakpoint-sm: 576px;
+    --breakpoint-md: 768px;
+    --breakpoint-lg: 992px;
+    --breakpoint-xl: 1200px;
+    --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+    --bs-gray-100: #f8f9fa;
+    --bs-gray-200: #e9ecef;
+    --bs-gray-300: #dee2e6;
+    --bs-gray-400: #ced4da;
+    --bs-gray-500: #adb5bd;
+    --bs-gray-600: #6c757d;
+    --bs-gray-700: #495057;
+    --bs-gray-800: #343a40;
+    --bs-gray-900: #212529;
+    --bs-primary-rgb: 13,110,253;
+    --bs-secondary-rgb: 108,117,125;
+    --bs-success-rgb: 25,135,84;
+    --bs-info-rgb: 13,202,240;
+    --bs-warning-rgb: 255,193,7;
+    --bs-danger-rgb: 220,53,69;
+    --bs-light-rgb: 248,249,250;
+    --bs-dark-rgb: 33,37,41;
+    --bs-white-rgb: 255,255,255;
+    --bs-black-rgb: 0,0,0;
+    --bs-body-color-rgb: 33,37,41;
+    --bs-body-bg-rgb: 255,255,255;
+    --bs-body-font-family: var(--bs-font-sans-serif);
+    --bs-body-font-size: 1rem;
+    --bs-body-font-weight: 400;
+    --bs-body-line-height: 1.5;
+    --bs-body-color: #212529;
+    --bs-body-bg: #fff;
+    --bs-blue: #0d6efd;
+    --bs-indigo: #6610f2;
+    --bs-purple: #6f42c1;
+    --bs-pink: #d63384;
+    --bs-red: #dc3545;
+    --bs-orange: #fd7e14;
+    --bs-yellow: #ffc107;
+    --bs-green: #198754;
+    --bs-teal: #20c997;
+    --bs-cyan: #0dcaf0;
+    --bs-white: #fff;
+    --bs-gray: #6c757d;
+    --bs-gray-dark: #343a40;
+    --bs-primary: #0d6efd;
+    --bs-secondary: #6c757d;
+    --bs-success: #198754;
+    --bs-info: #0dcaf0;
+    --bs-warning: #ffc107;
+    --bs-danger: #dc3545;
+    --bs-light: #f8f9fa;
+    --bs-dark: #212529;
+    --bs-font-sans-serif: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    --bs-font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+    --bs-gradient: linear-gradient(180deg,hsla(0,0%,100%,.15),hsla(0,0%,100%,0));
+    --primary-color: #403f83;
+    --primary-color-rgb: 64,63,131;
+    --secondary-color: #8364e2;
+    --secondary-color-rgb: 131,100,226;
+    -webkit-text-size-adjust: 100%;
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    visibility: visible;
+    -webkit-tap-highlight-color: transparent;
+    text-transform: none;
+    color: #000!important;
+    font-size: 30px!important;
+    user-select: none;
+    cursor: pointer;
+    font: inherit;
+    box-sizing: border-box;
+    --body-font: "DM Sans",Helvetica,Arial,sans-serif;
+    --title-font: "DM Sans",Helvetica,Arial,sans-serif;
 }
-
-
