Lots of changes. Especially to skeleton. FINALLY figured out how to navigate web inspector enough to find source docs. Layout is still not identical in Hot Collections panel. Don't know what to do about that.

--- a/src/css/styles/style.css
+++ b/src/css/styles/style.css
@@ -13206,6 +13206,7 @@ a.read_more i {
 .nft_wrap {
   position: relative;
   width: 100%;
+  /* height was originally 200px */
   height: 200%;
   overflow: hidden;
   border-radius: 10px 10px 0 0;
