--- a/src/css/styles/bwSkeleton.css
+++ b/src/css/styles/bwSkeleton.css
@@ -65,3 +65,22 @@
   width: 50px;
   border-radius: 5px;
 }
+
+/* Skeleton renamed from inline styles */
+.wrapSkel {
+  width: 100%;
+  height: 200px;
+}
+.ppSkel {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.infoSkel--top {
+  width: 100px;
+  height: 20px;
+}
+.infoSkel--bottom {
+  width: 60px;
+  height: 20px;
+}
