getItems component should be 100%. Need to work on countdown timer.

--- a/src/css/styles/style.css
+++ b/src/css/styles/style.css
@@ -13207,7 +13207,7 @@ a.read_more i {
   position: relative;
   width: 100%;
     /* height was originally 200px */
-  height: 200%;
+  height: 200px;
   overflow: hidden;
   border-radius: 10px 10px 0 0;
   -moz-border-radius: 10px 10px 0 0;
