--- a/src/css/styles/supplemental.css
+++ b/src/css/styles/supplemental.css
@@ -28,3 +28,13 @@
   font-weight: bolder;
   color: black;
 }
+.image-wrapper {
+  width: 100%;
+  aspect-ratio: 1/1;
+}
+.image-wrapper img,
+.image-wrapper .skeleton {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
